--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "zustand-actions",
     "private": false,
-    "version": "0.1.15",
+    "version": "0.1.16",
     "type": "module",
     "description": "Split your Zustand store into state and actions",
     "scripts": {
@@ -17,18 +17,17 @@
         "zustand": "^4.5.2"
     },
     "devDependencies": {
-        "@types/node": "^20.12.7",
-        "@typescript-eslint/eslint-plugin": "7.7.0",
-        "@typescript-eslint/parser": "7.7.0",
-        "eslint": "8.57.0",
-        "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-jsdoc": "48.2.2",
-        "eslint-plugin-prettier": "5.1.3",
-        "prettier": "3.2.5",
-        "prettier-plugin-organize-imports": "^3.2.4",
+        "@types/node": "20.12.11",
+        "@eslint/js": "8.57.0",
+        "@stylistic/eslint-plugin": "2.1.0",
+        "eslint-import-resolver-typescript": "3.6.1",
+        "eslint-plugin-import-x": "0.5.0",
+        "eslint-plugin-simple-import-sort": "12.1.0",
+        "tslib": "2.6.2",
         "typescript": "5.4.5",
-        "vite": "5.2.7",
-        "vite-plugin-dts": "3.8.2",
+        "typescript-eslint": "7.8.0",
+        "vite": "5.2.10",
+        "vite-plugin-dts": "3.9.1",
         "vite-plugin-linter": "2.1.1",
         "vite-tsconfig-paths": "4.3.2"
     }
