--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "description": "Split your Zustand store into state and actions",
     "scripts": {
         "build": "tsc && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+        "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0"
     },
     "files": [
         "dist"
