--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,21 +9,23 @@
         "project": "./tsconfig.json"
     },
     "plugins": [
-        "@typescript-eslint",
         "@stylistic/js",
+        "@stylistic/jsx",
         "@stylistic/plus",
         "@stylistic/ts",
+        "@typescript-eslint",
         "import-x",
         "simple-import-sort"
     ],
     "extends": [
         "./eslint/v8/.eslintrc.json",
-        "./eslint/v8/@typescript-eslint/.eslintrc.json",
         "./eslint/v8/@stylistic/js/.eslintrc.json",
+        "./eslint/v8/@stylistic/jsx/.eslintrc.json",
         "./eslint/v8/@stylistic/plus/.eslintrc.json",
         "./eslint/v8/@stylistic/ts/.eslintrc.json",
+        "./eslint/v8/@typescript-eslint/.eslintrc.json",
         "./eslint/v8/import-x/.eslintrc.json",
-        "./eslint/v8/simple-import-sort/.eslintrc.json"
+        "./eslint/v8/simple-import-sort/.eslintrc.json",
     ],
     "ignorePatterns": [
         "dist",
