--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "zustand-actions",
     "private": false,
-    "version": "0.1.24",
+    "version": "0.1.25",
     "type": "module",
     "description": "Split your Zustand store into state and actions",
     "scripts": {
@@ -14,21 +14,25 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "dependencies": {
-        "zustand": "^4.5.2"
+        "zustand": "^5.0.0"
     },
     "devDependencies": {
-        "@types/node": "20.12.11",
-        "@eslint/js": "8.57.0",
-        "@stylistic/eslint-plugin": "2.1.0",
-        "eslint-import-resolver-typescript": "3.6.1",
-        "eslint-plugin-import-x": "0.5.0",
-        "eslint-plugin-simple-import-sort": "12.1.0",
-        "tslib": "2.6.2",
         "typescript": "5.4.5",
-        "typescript-eslint": "7.8.0",
-        "vite": "5.2.10",
-        "vite-plugin-dts": "3.9.1",
+        "ajv":"8.17.1",
+        "vite": "5.4.9",
+        "vite-plugin-dts": "4.2.4",
         "vite-plugin-linter": "2.1.1",
-        "vite-tsconfig-paths": "4.3.2"
+        "vite-tsconfig-paths": "5.0.1",
+
+        "eslint": "8.57.1",
+        "@stylistic/eslint-plugin-js": "2.9.0",
+        "@stylistic/eslint-plugin-jsx": "2.9.0",
+        "@stylistic/eslint-plugin-plus": "2.9.0",
+        "@stylistic/eslint-plugin-ts": "2.9.0",
+        "@typescript-eslint/eslint-plugin": "8.8.1",
+        "@typescript-eslint/parser": "8.8.1",
+        "eslint-import-resolver-typescript": "3.6.3",
+        "eslint-plugin-import-x": "4.3.1",
+        "eslint-plugin-simple-import-sort": "12.1.1"
     }
 }
