--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
     "name": "zustand-actions",
-    "private": false,
-    "version": "0.1.25",
-    "type": "module",
     "description": "Split your Zustand store into state and actions",
+    "private": false,
+    "version": "1.0.0",
+    "type": "module",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/freehour/zustand-actions.git"
+    },
     "scripts": {
-        "build": "tsc && vite build",
-        "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0"
+        "lint": "eslint . --ext ts",
+        "build": "bun run lint && tsc && vite build"
     },
     "files": [
         "dist"
@@ -14,25 +18,24 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "dependencies": {
-        "zustand": "^5.0.1"
+        "immer": "^10.2.0",
+        "zustand": "^5.0.8"
     },
     "devDependencies": {
-        "typescript": "5.6.3",
-        "ajv":"8.17.1",
-        "vite": "5.4.11",
-        "vite-plugin-dts": "4.3.0",
-        "vite-plugin-linter": "2.1.1",
-        "vite-tsconfig-paths": "5.1.2",
-
         "eslint": "8.57.1",
         "@stylistic/eslint-plugin-js": "2.10.1",
-        "@stylistic/eslint-plugin-jsx": "2.10.1",
         "@stylistic/eslint-plugin-plus": "2.10.1",
         "@stylistic/eslint-plugin-ts": "2.10.1",
         "@typescript-eslint/eslint-plugin": "8.14.0",
         "@typescript-eslint/parser": "8.14.0",
         "eslint-import-resolver-typescript": "3.6.3",
         "eslint-plugin-import-x": "4.4.3",
-        "eslint-plugin-simple-import-sort": "12.1.1"
+        "eslint-plugin-simple-import-sort": "12.1.1",
+        "ajv": "^8.17.1",
+        "bun-types": "^1.3.1",
+        "vite": "^7.2.2",
+        "vite-plugin-dts": "^4.5.4",
+        "vite-tsconfig-paths": "^5.1.4",
+        "typescript": "^5.9.3"
     }
 }
